--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,17 @@ code {
 
 html, body, #root {
   height: 100%;
+  background-color: #999;
 }
 
 .App {
-  width: 100%;
-  height: 100%;
+  margin: 3em auto;
+  width: 75%;
+  height: 75%;
 }
 
 .App canvas {
   display:block;
+  background-color: #fff;
+  box-shadow: 5px 10px #666;
 }
